Add basic SCTP support
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ libgensio_la_SOURCES = \
 	gensio_filter_telnet.c telnet.c buffer.c \
 	gensio_ll_fd.c gensio_ll_gensio.c gensio_acc_gensio.c \
 	gensio_ll_ipmisol.c sergensio_ipmisol.c \
-	utils.c selector.c
+	utils.c selector.c gensio_sctp.c
 
 libgensio_la_LDFLAGS = $(OPENSSL_LIBS)
 
