Move the library code into a lib directory
Keep from cluttering up the main directory, and getting ready
for tools and samples directories.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -229,6 +229,7 @@ AC_SUBST(PYTHON_SWIG_FLAGS)
 AC_CHECK_LIB(sctp, sctp_bindx)
 
 AC_OUTPUT([Makefile
+	lib/Makefile
 	include/Makefile
 	include/gensio/Makefile
 	tests/Makefile
