--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,7 +5,7 @@ noinst_PROGRAMS = sertest
 
 sertest_SOURCES = sertest.c
 
-sertest_LDADD = $(top_builddir)/libgensio.la -lreadline $(OPENSSL_LIBS)
+sertest_LDADD = $(top_builddir)/lib/libgensio.la -lreadline $(OPENSSL_LIBS)
 
 utst_builddir = $(shell readlink -f $(top_builddir))
 utst_srcdir = $(shell readlink -f $(top_srcdir))
