--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -18,7 +18,7 @@ gensio_wrap.c gensio.py: $(top_srcdir)/swig/gensio.i \
 EXTRA_DIST = gensio_python.i
 
 nodist__gensio_la_SOURCES = gensio_wrap.c
-_gensio_la_LIBADD = ../../libgensio.la ../termios.lo $(OPENSSL_LIBS)
+_gensio_la_LIBADD = $(top_builddir)/lib/libgensio.la ../termios.lo $(OPENSSL_LIBS)
 _gensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS)
 
 clean-local:
