Add a gensiot program that connects two gensios together
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = . lib include $(SWIG_DIR) tests
+SUBDIRS = . lib include $(SWIG_DIR) tests tools
 
 DIST_SUBDIRS = swig
