--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -6,3 +6,5 @@ bin_PROGRAMS = gensiotool
 gensiotool_SOURCES = gensiotool.c
 
 gensiotool_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
+
+man_MANS = gensiotool.1
