--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,27 @@
-*.pyc
-INSTALL
-
-# http://www.gnu.org/software/automake
-
+config.*
+configure
+Makefile
 Makefile.in
-/ar-lib
-/mdate-sh
-/py-compile
-/test-driver
-/ylwrap
-
-# http://www.gnu.org/software/autoconf
-
-/autom4te.cache
-/autoscan.log
-/autoscan-*.log
-/aclocal.m4
-/compile
-/config.guess
-/config.h.in
-/config.sub
-/configure
-/configure.scan
-/depcomp
-/install-sh
-/missing
-/stamp-h1
-
-# https://www.gnu.org/software/libtool/
-
-/ltmain.sh
-
-# http://www.gnu.org/software/texinfo
-
-/texinfo.tex
-
-# http://www.gnu.org/software/m4/
-
+tags
+ser2net.spec
+missing
+aclocal.m4
+libtool
+ltmain.sh
+depcomp
+install-sh
+/.deps/
+/autom4te.cache/
+m4/lt*.m4
 m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-autom4te.cache
+*.o
+*~
+*.pyc
+*.cmd
+.tmp_versions
+Module.*
+modules.*
+*.ko
+*.mod.c
+*.ur-safe
+ser2net
