Add manual pages to the distribution.
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -8,3 +8,5 @@ gensiotool_SOURCES = gensiotool.c
 gensiotool_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
 
 man_MANS = gensiotool.1
+
+EXTRA_DIST = $(man_MANS)
