--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,12 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = . lib include $(SWIG_DIR) tests tools
+SUBDIRS = lib include $(SWIG_DIR) tests tools
 
-DIST_SUBDIRS = swig
+DIST_SUBDIRS = lib swig include tests tools
 
 man_MANS = gensio.5
 
-EXTRA_DIST = $(man_MANS)
+EXTRA_DIST = $(man_MANS) \
+	linux-serial-echo/Makefile linux-serial-echo/serialsim.c \
+	linux-serial-echo/serialsim.h
