Split up gensiotool to separate out I/O handling
This way the I/O handling and serial handling can be used in
other programs.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -3,7 +3,9 @@ AM_CFLAGS = -I$(top_srcdir)/include
 
 bin_PROGRAMS = gensiotool
 
-gensiotool_SOURCES = gensiotool.c
+gensiotool_SOURCES = gensiotool.c ioinfo.c ser_ioinfo.c
+
+noinst_HEADERS = ioinfo.h ser_ioinfo.h
 
 gensiotool_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
 
