--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,13 +1,18 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include
 
+noinst_LIBRARIES = libgensiotool.a
+
+libgensiotool_a_SOURCES = ioinfo.c ser_ioinfo.c utils.c
+
 bin_PROGRAMS = gensiotool
 
-gensiotool_SOURCES = gensiotool.c ioinfo.c ser_ioinfo.c utils.c
+gensiotool_SOURCES = gensiotool.c
 
 noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h
 
-gensiotool_LDADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
+gensiotool_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
+	$(OPENSSL_LIBS)
 
 man_MANS = gensiotool.1
 
