Add a remote shell over gensio TLS program gtlssh
Basically the equivalent of ssh, but over TLS with gensios.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -5,13 +5,18 @@ noinst_LIBRARIES = libgensiotool.a
 
 libgensiotool_a_SOURCES = ioinfo.c ser_ioinfo.c utils.c
 
-bin_PROGRAMS = gensiotool
+bin_PROGRAMS = gensiotool gtlssh
 
 gensiotool_SOURCES = gensiotool.c
+
+gtlssh_SOURCES = gtlssh.c
 
 noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h
 
 gensiotool_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
+	$(OPENSSL_LIBS)
+
+gtlssh_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	$(OPENSSL_LIBS)
 
 man_MANS = gensiotool.1
