--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,17 +1,19 @@
 
 AM_CFLAGS = -I$(top_srcdir)/include
 
-AM_CPPFLAGS = -DSYSCONFDIR="${sysconfdir}"
+AM_CPPFLAGS = -DSYSCONFDIR="\"${sysconfdir}\""
 
 noinst_LIBRARIES = libgensiotool.a
 
 libgensiotool_a_SOURCES = ioinfo.c ser_ioinfo.c utils.c
 
-bin_PROGRAMS = gensiotool gtlssh
+bin_PROGRAMS = gensiotool gtlssh gtlsshd
 
 gensiotool_SOURCES = gensiotool.c
 
 gtlssh_SOURCES = gtlssh.c
+
+gtlsshd_SOURCES = gtlsshd.c
 
 noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h
 
@@ -19,6 +21,9 @@ gensiotool_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	$(OPENSSL_LIBS)
 
 gtlssh_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
+	$(OPENSSL_LIBS)
+
+gtlsshd_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	$(OPENSSL_LIBS)
 
 man_MANS = gensiotool.1
