Add pam handling to gtlsshd
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -18,13 +18,13 @@ gtlsshd_SOURCES = gtlsshd.c
 noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h
 
 gensiotool_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	$(OPENSSL_LIBS)
+	$(OPENSSL_LIBS) -lpam
 
 gtlssh_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	$(OPENSSL_LIBS)
+	$(OPENSSL_LIBS) -lpam
 
 gtlsshd_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	$(OPENSSL_LIBS)
+	$(OPENSSL_LIBS) -lpam
 
 man_MANS = gensiotool.1
 
