Rework error handling
Instead of using errnos, create gensio-specific errors and
translate as necessary.  This gives more flexibility and
portability.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/include/gensio/Makefile.am
+++ b/include/gensio/Makefile.am
@@ -2,5 +2,5 @@
 pkginclude_HEADERS = gensio.h gensio_class.h sergensio.h sergensio_class.h \
 	gensio_selector.h waiter.h gensio_base.h gensio_acc_gensio.h \
 	gensio_ll_fd.h gensio_ll_gensio.h selector.h argvutils.h \
-	gensio_os_funcs.h
+	gensio_os_funcs.h gensio_err.h
 
