--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -7,7 +7,8 @@ noinst_LIBRARIES = libgensiotool.a
 
 libgensiotool_a_SOURCES = ioinfo.c ser_ioinfo.c utils.c
 
-bin_PROGRAMS = gensiotool gtlssh gtlsshd
+bin_PROGRAMS = gensiotool gtlssh @GTLSSHD@
+EXTRA_PROGRAMS = gtlsshd
 
 bin_SCRIPTS = gtlssh-keygen
 
@@ -26,13 +27,13 @@ gtlsshd_SOURCES = gtlsshd.c
 noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h
 
 gensiotool_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	$(OPENSSL_LIBS) -lpam
+	$(OPENSSL_LIBS)
 
 gtlssh_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	$(OPENSSL_LIBS) -lpam
+	$(OPENSSL_LIBS)
 
 gtlsshd_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	$(OPENSSL_LIBS) -lpam
+	$(OPENSSL_LIBS) @PAMLIB@
 
 man_MANS = gensiotool.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1
 
