--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -7,7 +7,7 @@ noinst_LIBRARIES = libgensiotool.a
 
 libgensiotool_a_SOURCES = ioinfo.c ser_ioinfo.c utils.c
 
-bin_PROGRAMS = gensiotool gtlssh @GTLSSHD@
+bin_PROGRAMS = gensiot gtlssh @GTLSSHD@
 EXTRA_PROGRAMS = gtlsshd
 
 bin_SCRIPTS = gtlssh-keygen
@@ -18,7 +18,7 @@ gtlssh-keygen: gtlssh-keygen.in
 	$(do_subst) <$(srcdir)/gtlssh-keygen.in >gtlssh-keygen
 	chmod +x gtlssh-keygen
 
-gensiotool_SOURCES = gensiotool.c
+gensiot_SOURCES = gensiotool.c
 
 gtlssh_SOURCES = gtlssh.c
 
@@ -26,7 +26,7 @@ gtlsshd_SOURCES = gtlsshd.c
 
 noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h
 
-gensiotool_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
+gensiot_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	$(OPENSSL_LIBS)
 
 gtlssh_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
@@ -35,6 +35,6 @@ gtlssh_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
 gtlsshd_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	$(OPENSSL_LIBS) @PAMLIB@
 
-man_MANS = gensiotool.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1
+man_MANS = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1
 
 EXTRA_DIST = $(man_MANS)
