Rework waiting code, add syncio tests
Make all functions that wait return the time left and rework all
the wait_timeout users.

Add tests for synchronous I/O, including the new time left returns.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -7,7 +7,7 @@ AM_TESTS_ENVIRONMENT = PYTHONPATH=$(utst_builddir)/swig/python:$(utst_builddir)/
 test_setup:
 	echo $(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/
 
-TESTS = test_gensio.py
+TESTS = test_gensio.py test_syncio.py
 
 EXTRA_DIST = $(TESTS) utils.py ipmisimdaemon.py termioschk.py \
 	CA.pem cert.pem key.pem
