Move man page to its own directory
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -248,4 +248,5 @@ AC_OUTPUT([Makefile
 	tests/Makefile
 	tools/Makefile
 	swig/Makefile
-	swig/python/Makefile])
+	swig/python/Makefile
+	man/Makefile])
