--- a/Makefile.am
+++ b/Makefile.am
@@ -1,12 +1,10 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = lib include $(SWIG_DIR) tests tools
+SUBDIRS = lib include $(SWIG_DIR) tests tools man
 
 DIST_SUBDIRS = lib swig include tests tools
 
-man_MANS = gensio.5
-
-EXTRA_DIST = $(man_MANS) \
+EXTRA_DIST = \
 	linux-serial-echo/Makefile linux-serial-echo/serialsim.c \
 	linux-serial-echo/serialsim.h
