--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,4 +1,5 @@
-man_MANS = gensio.5 gensio_event.3
+man_MANS = gensio.5 gensio_event.3 str_to_gensio.3 str_to_gensio_child.3 \
+	gensio_acc_str_to_gensio.3
 
 EXTRA_DIST = $(man_MANS)
 
