Remove serialsim and remote termios
Put them in their own repository as they are stand-alone

This required reworking the remote termios interface to remote
the dependence on the gensio library.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -6,7 +6,7 @@ AM_CFLAGS = $(PYTHON_CPPFLAGS) \
 
 pythonlibdir=$(PYTHON_INSTALL_LIB_DIR)
 PYPATH=$(top_builddir)/swig/python:$(top_builddir)/swig/python/.libs
-pythonlib_LTLIBRARIES = _gensio.la _remote_termios.la
+pythonlib_LTLIBRARIES = _gensio.la
 
 noinst_HEADERS = gensio_python.h
 
@@ -16,31 +16,19 @@ gensio_wrap.c gensio.py: $(top_srcdir)/swig/gensio.i \
 	$(SWIG) $(DEFS) -python $(PYTHON_SWIG_FLAGS) -o gensio_wrap.c \
 		-I$(top_srcdir)/swig/python $<
 
-EXTRA_DIST = gensio_python.i remote_termios.i
+EXTRA_DIST = gensio_python.i
 
 nodist__gensio_la_SOURCES = gensio_wrap.c
 _gensio_la_LIBADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS)
 _gensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS)
 
-remote_termios_wrap.c remote_termios.py: remote_termios.i
-	$(SWIG) $(DEFS) -python $(PYTHON_SWIG_FLAGS) -o remote_termios_wrap.c \
-	$<
-
-nodist__remote_termios_la_SOURCES = remote_termios_wrap.c
-_remote_termios_la_SOURCES = remote_termios.c
-_remote_termios_la_LIBADD = $(top_builddir)/lib/libgensio.la
-_remote_termios_la_LDFLAGS = -module -avoid-version
-
 clean-local:
-	rm -rf __pycache__ gensio_wrap.c gensio.py remote_termios_wrap.c \
-		remote_termios.py*
+	rm -rf __pycache__ gensio_wrap.c gensio.py
 
 install-exec-local: _gensio.la gensio.py
 	$(INSTALL) -d $(DESTDIR)$(PYTHON_INSTALL_DIR)
 	$(INSTALL_DATA) gensio.py "$(DESTDIR)$(PYTHON_INSTALL_DIR)"
-	$(INSTALL_DATA) remote_termios.py "$(DESTDIR)$(PYTHON_INSTALL_DIR)"
 
 uninstall-local:
 	$(LIBTOOL) --mode=uninstall rm -f "$(DESTDIR)$(PYTHON_INSTALL_LIB_DIR)/_gensio.so"
 	rm -f "$(DESTDIR)$(PYTHON_INSTALL_DIR)/gensio.py"
-	rm -f "$(DESTDIR)$(PYTHON_INSTALL_DIR)/remote_termios.py"
