--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,6 +1,8 @@
 man_MANS = gensio.5 gensio_event.3 str_to_gensio.3 gensio_set_callback.3 \
 	gensio_set_log_mask.3 gensio_os_funcs.3 gensio_err.3 gensio_write.3 \
-	gensio_get_raddr.3 gensio_raddr_to_str.3
+	gensio_get_raddr.3 gensio_raddr_to_str.3 gensio_open.3 \
+	gensio_open_channel.3 gensio_close.3 gensio_control.3 \
+	gensio_set_read_callback_enable.3 gensio_get_type.3 gensio_set_sync.3
 
 install-data-hook:
 	$(LN_S) -f str_to_gensio.3 $(DESTDIR)$(man3dir)/str_to_gensio_child.3
@@ -13,6 +15,23 @@ install-data-hook:
 	$(LN_S) -f gensio_set_log_mask.3 $(DESTDIR)$(man3dir)/gensio_log.3
 	$(LN_S) -f gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_default_os_hnd.3
 	$(LN_S) -f gensio_err.3 $(DESTDIR)$(man3dir)/gensio_err_to_str.3
+	$(LN_S) -f gensio_open.3 $(DESTDIR)$(man3dir)/gensio_open_s.3
+	$(LN_S) -f gensio_open.3 $(DESTDIR)$(man3dir)/gensio_open_nochild.3
+	$(LN_S) -f gensio_open.3 $(DESTDIR)$(man3dir)/gensio_open_nochild_s.3
+	$(LN_S) -f gensio_open_channel.3 $(DESTDIR)$(man3dir)/gensio_open_channel_s.3
+	$(LN_S) -f gensio_close.3 $(DESTDIR)$(man3dir)/gensio_close_s.3
+	$(LN_S) -f gensio_close.3 $(DESTDIR)$(man3dir)/gensio_disable.3
+	$(LN_S) -f gensio_close.3 $(DESTDIR)$(man3dir)/gensio_free.3
+	$(LN_S) -f gensio_set_read_callback_enable.3 $(DESTDIR)$(man3dir)/gensio_set_write_callback_enable.3
+	$(LN_S) -f gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_get_child.3
+	$(LN_S) -f gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_client.3
+	$(LN_S) -f gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_reliable.3
+	$(LN_S) -f gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_packet.3
+	$(LN_S) -f gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_authenticated.3
+	$(LN_S) -f gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_encrypted.3
+	$(LN_S) -f gensio_set_sync.3 $(DESTDIR)$(man3dir)/gensio_clear_sync.3
+	$(LN_S) -f gensio_set_sync.3 $(DESTDIR)$(man3dir)/gensio_read_s.3
+	$(LN_S) -f gensio_set_sync.3 $(DESTDIR)$(man3dir)/gensio_write_s.3
 
 uninstall-hook:
 	-rm -f $(DESTDIR)$(man3dir)/str_to_gensio_child.3
