--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -32,6 +32,7 @@ install-data-hook:
 	$(LN_SF) gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_client.3
 	$(LN_SF) gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_reliable.3
 	$(LN_SF) gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_packet.3
+	$(LN_SF) gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_message.3
 	$(LN_SF) gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_authenticated.3
 	$(LN_SF) gensio_get_type.3 $(DESTDIR)$(man3dir)/gensio_is_encrypted.3
 	$(LN_SF) gensio_set_sync.3 $(DESTDIR)$(man3dir)/gensio_clear_sync.3
@@ -47,6 +48,7 @@ install-data-hook:
 	$(LN_SF) gensio_acc_set_accept_callback_enable.3 $(DESTDIR)$(man3dir)/gensio_acc_set_accept_callback_enable_s.3
 	$(LN_SF) gensio_acc_get_type.3 $(DESTDIR)$(man3dir)/gensio_acc_is_reliable.3
 	$(LN_SF) gensio_acc_get_type.3 $(DESTDIR)$(man3dir)/gensio_acc_is_packet.3
+	$(LN_SF) gensio_acc_get_type.3 $(DESTDIR)$(man3dir)/gensio_acc_is_message.3
 	$(LN_SF) gensio_add_default.3 $(DESTDIR)$(man3dir)/gensio_set_default.3
 	$(LN_SF) gensio_add_default.3 $(DESTDIR)$(man3dir)/gensio_get_default.3
 	$(LN_SF) gensio_add_default.3 $(DESTDIR)$(man3dir)/gensio_get_defaultaddr.3
@@ -79,6 +81,7 @@ uninstall-hook:
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_is_client.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_is_reliable.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_is_packet.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_is_message.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_is_authenticated.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_is_encrypted.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_clear_sync.3
@@ -94,6 +97,7 @@ uninstall-hook:
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_acc_set_accept_callback_enable_s.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_acc_is_reliable.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_acc_is_packet.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_acc_is_message.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_set_default.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_get_default.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_get_defaultaddr.3
