--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -20,6 +20,7 @@ install-data-hook:
 	$(LN_SF) gensio_set_log_mask.3 $(DESTDIR)$(man3dir)/gensio_log.3
 	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_default_os_hnd.3
 	$(LN_SF) gensio_err.3 $(DESTDIR)$(man3dir)/gensio_err_to_str.3
+	$(LN_SF) gensio_write.3 $(DESTDIR)$(man3dir)/gensio_write_sg.3
 	$(LN_SF) gensio_open.3 $(DESTDIR)$(man3dir)/gensio_open_s.3
 	$(LN_SF) gensio_open.3 $(DESTDIR)$(man3dir)/gensio_open_nochild.3
 	$(LN_SF) gensio_open.3 $(DESTDIR)$(man3dir)/gensio_open_nochild_s.3
@@ -68,6 +69,7 @@ uninstall-hook:
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_vlog.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_log.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_default_os_hnd.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_write_sg.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_err_to_str.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_open_s.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_open_nochild.3
