--- a/Makefile.am
+++ b/Makefile.am
@@ -4,3 +4,5 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = lib include $(SWIG_DIR) tests tools man
 
 DIST_SUBDIRS = lib swig include tests tools man
+
+EXTRA_DIST = README.rst
