Modify the tests to generate keys if necessary
Using hard-coded keys results in issues if the keys expire.  So
instead generate them automatically.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,12 +2,19 @@
 utst_builddir = $(shell readlink -f $(top_builddir))
 utst_srcdir = $(shell readlink -f $(top_srcdir))
 
-AM_TESTS_ENVIRONMENT = PYTHONPATH=$(utst_builddir)/swig/python:$(utst_builddir)/tests:$(utst_builddir)/swig/python/.libs:$(utst_builddir)/tests/.libs TESTPATH=$(utst_srcdir)/tests
+AM_TESTS_ENVIRONMENT = \
+    PYTHONPATH=$(utst_builddir)/swig/python:$(utst_builddir)/tests:$(utst_builddir)/swig/python/.libs:$(utst_builddir)/tests/.libs; export PYTHONPATH; \
+    TESTPATH=$(utst_srcdir)/tests; export TESTPATH; \
+    if [ ! -e ca ]; then \
+	$(utst_srcdir)/tests/make_keys; \
+    fi;
 
 test_setup:
 	echo $(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/
 
 TESTS = test_gensio.py test_syncio.py
 
-EXTRA_DIST = $(TESTS) utils.py ipmisimdaemon.py termioschk.py \
-	CA.pem cert.pem key.pem
+EXTRA_DIST = $(TESTS) utils.py ipmisimdaemon.py termioschk.py
+
+clean-local:
+	rm -rf ca
