gtlssh: Add a library for handling accepts -> mux connections
This will handle setting up accepts and when one comes in making a
connection to a mux.  For use by gtlssh and gtlsshd for making
connections to the other end.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -5,7 +5,7 @@ AM_CPPFLAGS = -DSYSCONFDIR="\"${sysconfdir}\""
 
 noinst_LIBRARIES = libgensiotool.a
 
-libgensiotool_a_SOURCES = ioinfo.c ser_ioinfo.c utils.c
+libgensiotool_a_SOURCES = ioinfo.c ser_ioinfo.c utils.c localports.c
 
 bin_PROGRAMS = gensiot gtlssh
 sbin_PROGRAMS = @GTLSSHD@
