Add missing localports.h to the distro
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -25,7 +25,7 @@ gtlssh_SOURCES = gtlssh.c
 
 gtlsshd_SOURCES = gtlsshd.c
 
-noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h
+noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h localports.h
 
 gensiot_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	$(OPENSSL_LIBS)
