Add mux fuzzing
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,15 +18,26 @@ test_fuzz_certauth:
 	mkdir -p fuzz-results-certauth
 	$(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/test_fuzz_setup.py \
 		$(top_builddir)/tools/gensiot randfile \
-		'certauth(cert=ca/clientcert.pem,key=ca/clientkey.pem,allow-unencrypted),stdio'\
-		'certauth(CA=ca/clientcert.pem,allow-unencrypted),stdio' \
+		'certauth(cert=ca/clientcert.pem,key=ca/clientkey.pem,allow-unencrypted)'\
+		'certauth(CA=ca/clientcert.pem,allow-unencrypted)' \
 		fuzz-test-certauth/tracefile
 	afl-fuzz -i fuzz-test-certauth -o fuzz-results-certauth \
 		$(top_builddir)/tools/gensiot --dummyrand randfile \
 		-i echo -a \
 		"certauth(CA=ca/clientcert.pem,allow-unencrypted),stdio"
 
-test_fuzz: test_fuzz_certauth
+test_fuzz_mux:
+	-rm -rf fuzz-test-mux fuzz-results-mux
+	mkdir -p fuzz-test-mux
+	mkdir -p fuzz-results-mux
+	$(AM_TESTS_ENVIRONMENT) python $(utst_srcdir)/tests/test_fuzz_setup.py \
+		$(top_builddir)/tools/gensiot randfile \
+		'mux' 'mux' fuzz-test-mux/tracefile
+	afl-fuzz -i fuzz-test-mux -o fuzz-results-mux \
+		$(top_builddir)/tools/gensiot --dummyrand randfile \
+		-i echo -a "mux,stdio"
+
+test_fuzz: test_fuzz_certauth test_fuzz_mux
 
 TESTS = test_gensio.py test_syncio.py
 
@@ -34,4 +45,5 @@ EXTRA_DIST = $(TESTS) utils.py ipmisimdaemon.py termioschk.py \
 	test_fuzz_setup.py
 
 clean-local:
-	-rm -rf ca randfile fuzz-test-certauth fuzz-results-certauth
+	-rm -rf ca randfile fuzz-test-certauth fuzz-results-certauth \
+		 fuzz-test-mux fuzz-results-mux
